# SIS-Backend

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: django.yml
auth-trial/auth_api/: admin.py  models.py  serializers.py  urls.py  views.py
auth-trial/auth_api/migrations/: 0001_initial.py  0002_customuser_is_staff.py  0003_customuser_groups_customuser_is_superuser_and_more.py  0004_alter_customuser_enrollment_number.py  0005_alter_customuser_date_joined.py  0006_alter_customuser_date_of_birth.py  0007_alter_customuser_date_joined.py  0008_alter_customuser_date_joined_and_more.py  0009_alter_customuser_enrollment_number.py  0010_alter_customuser_date_of_birth.py
auth-trial/project/: settings.py  urls.py
backend/core/utils/: collections.py  misc.py  settings.py
backend/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
sis_backend/auth_api/: serializers.py  urls.py  views.py
sis_backend/bonafide/: urls.py  views.py
sis_backend/project/: asgi.py  settings.py  urls.py  wsgi.py
sis_backend/result/: models.py  serializers.py  urls.py  views.py
sis_backend/result/migrations/: 0001_initial.py
sis_backend/tc/: models.py  urls.py  views.py
sis_backend/tc/migrations/: 0001_initial.py  0002_delete_tcmodel.py
sis_backend/users/: admin.py  models.py  serializers.py  student_auth_backend.py  urls.py  views.py
sis_backend/users/migrations/: 0001_initial.py  0002_alter_student_user.py  0003_alter_student_user.py  0004_alter_teacher_user.py  0005_alter_teacher_user.py  0006_alter_teacher_user.py  0007_alter_student_user.py  0008_student_admission_date_student_birth_place_and_more.py  0009_alter_student_address_alter_student_category_and_more.py  (+4 more)
(+1 files in other folders)
