[tool.poetry]
name = "sis-backend"
version = "0.1.0"
description = ""
authors = ["PiyushVyas13 <vyaspiyush2208@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sis_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
pillow = "^9.4.0"
pandas = "^1.5.3"
django-crispy-forms = "^2.0"
django-split-settings = "^1.2.0"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
